# strips

./: .clang-format  .gitignore  CMakeLists.txt  main.c  main.cpp  main.py  prog copy  stripped_prog
libs/strips/: CMakeLists.txt  lib_strips.h
libs/strips/src/: strips.c  strips.h
src/: main.c  strips.cpp  strips.h
